# aws-backup-utility

./: LICENSE  README.md  pyproject.toml
s3backup/: aws.py  cli.py  notify.py  state.py  sync.py  tiers.py  ui.py
s3backup.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_aws.py  test_config.py  test_daemon.py  test_manifest.py  test_runner.py  test_scan.py  test_state.py  test_sync.py  test_sync_extra.py
