[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "s3backup"
version = "0.1.0"
description = "Terminal utility that keeps a local folder in sync with an S3 bucket, with storage-tier control. Wraps the AWS CLI."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "Steven Wett" }]
dependencies = [
    "questionary>=2.0",
    "rich>=13.0",
    "tomli>=2.0; python_version < '3.11'",
    "tomli-w>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
s3backup = "s3backup.cli:main"

[tool.setuptools.packages.find]
include = ["s3backup*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
